<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>AnalyticsSdkObjectDetectedWidget</class>
 <widget class="QWidget" name="AnalyticsSdkObjectDetectedWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>599</width>
    <height>92</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string/>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <layout class="QGridLayout" name="gridLayout" columnstretch="0,1">
     <item row="1" column="1">
      <widget class="QLineEdit" name="attributesEdit">
       <property name="placeholderText">
        <string></string>
       </property>
      </widget>
     </item>
     <item row="1" column="0">
       <widget class="nx::vms::client::desktop::LabelWithHint" name="attributesLabel">
         <property name="text">
           <string>Attributes:</string>
         </property>
       </widget>
     </item>
     <item row="0" column="1">
      <widget class="nx::vms::client::desktop::DetectableObjectTypeComboBox" name="detectableObjectTypeComboBox"/>
     </item>
     <item row="0" column="0">
       <widget class="nx::vms::client::desktop::LabelWithHint" name="sdkObjectTypeLabel">
         <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
           </sizepolicy>
         </property>
         <property name="text">
           <string>Object Type:</string>
         </property>
       </widget>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
    <class>nx::vms::client::desktop::LabelWithHint</class>
    <extends>QLabel</extends>
    <header location="global">nx/vms/client/desktop/common/widgets/widget_with_hint.h</header>
  </customwidget>
  <customwidget>
   <class>nx::vms::client::desktop::DetectableObjectTypeComboBox</class>
   <extends>QComboBox</extends>
   <header location="global">nx/vms/client/desktop/event_rules/widgets/detectable_object_type_combo_box.h</header>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
